--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,42 +52,44 @@
   --color-green-tint: rgba(62, 126, 89, 0.18);
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+@layer base {
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
 
-html {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-body {
-  font-family: 'Satoshi', ui-sans-serif, system-ui, sans-serif;
-  margin: 0;
-  color: var(--color-navy);
-  overflow-x: hidden;
-}
+  body {
+    font-family: 'Satoshi', ui-sans-serif, system-ui, sans-serif;
+    margin: 0;
+    color: var(--color-navy);
+    overflow-x: hidden;
+  }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
-img {
-  display: block;
-  max-width: 100%;
-}
+  img {
+    display: block;
+    max-width: 100%;
+  }
 
-button {
-  font-family: inherit;
-  cursor: pointer;
-  border: none;
+  button {
+    font-family: inherit;
+    cursor: pointer;
+    border: none;
+  }
 }
