--- a/src/pages/donate/complete.astro
+++ b/src/pages/donate/complete.astro
@@ -117,6 +117,7 @@ const successMessage = donateSettings?.successMessage
     const giftAid = params.get('giftAid') === 'true';
     const fund = params.get('fund') || undefined;
     const fundName = params.get('fundName') || undefined;
+    const subscriptionId = params.get('subscriptionId') || undefined;
     const donorName = params.get('donorName') || undefined;
     const addrLine1 = params.get('addrLine1') || undefined;
     const addrLine2 = params.get('addrLine2') || undefined;
@@ -152,6 +153,7 @@ const successMessage = donateSettings?.successMessage
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
           paymentIntentId: paymentIntent,
+          subscriptionId,
           donorEmail,
           donorName,
           fund,
